--- a/style.css
+++ b/style.css
@@ -233,12 +233,18 @@ button:hover{
 
 /* div1 */
 
+.d2{
+    position: relative;
+    left: -104px;
+}
+
+
 .d1 .div1{
     border-radius: 8px;
     border: 1px solid #e8e8e8;
     position: relative;
-    right: 106px;
-    width: 57%;
+    right: 5px;
+    width: 50%;
     height: 158px;
     padding-top: 15px;
 }
@@ -283,9 +289,8 @@ button:hover{
     border-radius: 8px;
     padding-top: 15px;
     position: relative;
-    right: 118px;
     width: 43%;
-    height: 156px;
+    height: 158px;
     background: url(images/year.jpeg);
     background-repeat: no-repeat;
     background-position: center;
@@ -299,7 +304,7 @@ button:hover{
     height: 44px;
     border: none;
     position: relative;
-    top: 28px;
+    top: 11px;
     left: 8px; 
     border-radius: 5px;   
 }
@@ -322,4 +327,48 @@ button:hover{
     font-size: 14px;
     font-weight: normal;
     letter-spacing: 0.7px;
+}
+
+/* picture */
+
+.d3 h2{
+    position: relative;
+    left: 8rem;
+    top: 10rem;
+    font-weight: bolder;
+    width: 80%;
+}
+
+.pics figure img{
+    border-radius: 10px;
+}
+
+.img1{
+    background-color: rgb(189, 187, 187);
+    padding: 12px;
+    height: 40px;
+    box-shadow: 0 0 10px rgba(130, 135, 139, 0.7);
+    margin-bottom: 1rem;
+    border-radius: 50%;
+    position: relative;
+    right: 47px;
+}
+
+figcaption{
+    color: #000;
+    font-weight: 900;
+    font-size: 15px;
+}
+
+.pics{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+    margin: 14% auto ;
+}
+
+.pics {
+    cursor: pointer;
 }
