--- a/style.css
+++ b/style.css
@@ -206,18 +206,16 @@ button:hover{
     width: 90%;
 }
 
-.content h3, p{
+.content h3{
     position: relative;
     left: 8rem;
-}
-
-
-.content h3{
     font-size: 24px;
     font-weight: 700;
 }
 
 .content p{
+    position: relative;
+    left: 8rem;
     margin-top: .3em;
     color: #555;
 }
@@ -310,7 +308,7 @@ button:hover{
 }
 
 .d1 .div2 button:hover{
-    background-color: rgba(17, 96, 185, 0.993);
+    background-color: rgba(59, 127, 206, 0.993);
 }
 
 .d1 .div2 h3{
@@ -347,14 +345,13 @@ button:hover{
     background-color: rgb(189, 187, 187);
     padding: 12px;
     height: 40px;
-    box-shadow: 0 0 10px rgba(130, 135, 139, 0.7);
     margin-bottom: 1rem;
     border-radius: 50%;
     position: relative;
     right: 47px;
 }
 
-figcaption{
+.pics figcaption{
     color: #000;
     font-weight: 900;
     font-size: 15px;
@@ -372,3 +369,136 @@ figcaption{
 .pics {
     cursor: pointer;
 }
+
+/* Destination */
+
+
+.d4{
+    width: 84%;
+    margin: 0% auto;
+    position: relative;
+    bottom: 5em;
+}
+
+.d4 h2{
+    font-weight: bolder;
+    font-size: 25px;
+    width: 80%;   
+}
+
+.d4 p{
+    padding: 10px 0px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+/* pic */
+
+.pic{
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
+}
+
+.pic .div3{
+    width: 100%;
+    height: 46vh;
+    border-radius: 10px;
+    box-shadow: inset 1px 60px 50px rgba(0, 0, 0, 0.397);
+}
+
+.pic .div3:hover{
+    box-shadow: inset 1px 60px 50px rgba(0, 0, 0, 0.63);
+    cursor: pointer;
+}
+
+.div3 h3{
+    color: #fff;
+    display: inline-block;
+    font-size: 22px;
+    position: relative;
+    top: 20px;
+    left: 13px;
+}
+
+.div3 img{
+    position: relative;
+    top: 24px;
+    left: 15px;
+}
+
+.pic .div3{
+    background-image: url(images/lahore.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.pic #div4{
+    background-image: url(images/dubai.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+/* pic2 */
+
+.pic2{
+    padding-top: 20px;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;   
+}
+
+.pic2 .div4{
+    width: 100%;
+    height: 45vh;
+    border-radius: 10px;
+    box-shadow: inset 1px 50px 37px rgba(0, 0, 0, 0.397);
+}
+
+.pic2 .div4:hover{
+    box-shadow: inset 1px 50px 37px rgba(0, 0, 0, 0.63);
+    cursor: pointer;
+}
+
+.div4 h3{
+    color: #fff;
+    display: inline-block;
+    font-size: 20px;
+    position: relative;
+    top: 18px;
+    left: 13px;
+}
+
+.div4 img{
+    position: relative;
+    top: 22px;
+    left: 15px;
+}
+
+
+.pic2 .div4{
+    background-image: url(images/islamabad.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;   
+}
+
+.pic2 #div5{
+    background-image: url(images/mecca.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;   
+}
+.pic2 #div6{
+    background-image: url(images/karachi.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;   
+}
+
+
+/* Explore */
+
